<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_version">1.1</string>
	<string name="app_name">Growl for Android</string>
	<string name="app_label">Growl</string>
	<string name="app_description">Receive Growl notifications from other devices.\n\nFor more information see:\nhttp://www.growlforandroid.com</string>
	<string name="app_copyright_message">Copyright 2012 Carey Bishop.\nhttp://growlforandroid.com\n\nBased on ideas and concepts developed by:\nGrowl (The Growl Project)\nhttp://growl.info\n\nGrowl for Windows (Brian Dunnington)\nhttp://growlforwindows.com\n\nUse of the Growl logo and name has been approved by The Growl Project.\n\nUses the jmDNS library under the terms of the Apache license.\nCopyright Arthur van Hoff and Rick Blair.\nhttp://jmdns.sf.net</string>
	<string name="growl_on">On</string>
	<string name="growl_off">Off</string>
	<string name="growl_on_status">Growl is running</string>
	<string name="growl_off_status">Growl is stopped</string>
	<string name="growl_active_subscription">Subscribed to 1 device</string>
	<string name="growl_active_subscriptions">Subscribed to %d devices</string>
	<string name="history_title">Notification History</string>
	<string name="history_recent_title">Recent Notifications</string>
	<string name="history_delete_prompt">Are you sure you want to delete your notification history?</string>
	<string name="service_label">Growl for Android Listener</string>
	<string name="service_started">Growl for Android started</string>
	<string name="service_stopped">Growl for Android stopped</string>
	<string name="notification_menu_app_preferences">App: %s</string>
	<string name="notification_menu_type_preferences">Type: %s</string>
	<string name="notification_menu_copy_message">Copy message</string>
	<string name="notification_menu_delete">Delete notification</string>
	<string name="menu_applications">Applications</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_clear_history">Clear History</string>
	<string name="menu_about">About</string>
	<string name="dialog_name">Name</string>
	<string name="dialog_address">Address</string>
	<string name="dialog_password">Password</string>
	<string name="dialog_add">Add</string>
	<string name="dialog_ok">OK</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="dialog_save">Save</string>
	<string name="add_password_dialog_title">Add Password</string>
	<string name="applications_title">Growl - Registered Applications</string>
	<string name="applications_empty_label">No registered applications.\n\nYou may need to restart the remote application to register its notifications.</string>
	<string name="applications_delete_prompt">Are you sure you want to delete this application?\n\nDeleting an application will delete all of its notification types and history, but will not prevent the application from re-registering in future.</string>

	<string-array name="applications_item_menu">
		<item>Preferences</item>
		<item>Delete</item>
	</string-array>

	<string name="application_title">Growl - Application Preferences</string>
	<string name="application_options_title">Options</string>
	<string name="application_option_disabled">Disabled</string>
	<string name="application_option_enabled">Enabled</string>
	<string name="application_option_enabled_summary">Display notifications from this application</string>
	<string name="application_option_display_title">Default Display</string>
	<string name="application_option_display_default">(Use global display setting)</string>
	<string name="application_types_title">Notification Types</string>
	<string name="passwords_title">Growl - Password Manager</string>
	<string name="passwords_empty_label">Press Menu > Add Password to add a password</string>
	<string name="passwords_add_password">Add Password</string>
	<string name="password_menu_title">Password</string>

	<string-array name="passwords_menu">
		<item>Delete</item>
	</string-array>

	<string name="preferences_title">Growl - Preferences</string>
	<string name="preferences_general_title">General</string>
	<string name="preferences_general_auto_start">Listen automatically</string>
	<string name="preferences_general_auto_start_summary">Start/stop based on network availability</string>
	<string name="preferences_general_announce_using_zeroconf">Announce to other devices</string>
	<string name="preferences_general_announce_using_zeroconf_summary">Enables use of Bonjour/ZeroConf to simplify setup</string>
	<string name="preferences_general_device_name">Device name</string>
	<string name="preferences_general_device_name_summary">The name of this device as announced to the network</string>
	<string name="preferences_listen_title">Listen for notifications from</string>
	<string name="preferences_listen_gntp">Growl for Windows / Growl for Lion</string>
	<string name="preferences_listen_gntp_summary">GNTP</string>
	<string name="preferences_listen_growl_udp">Growl UDP</string>
	<string name="preferences_listen_growl_udp_summary">UDP</string>
	<string name="preferences_listen_subscriptions">Subscriptions</string>
	<string name="preferences_listen_subscriptions_summary">Subscribe to notifications from other devices</string>
	<string name="preferences_security_title">Security</string>
	<string name="preferences_security_require_passwords">Require passwords</string>
	<string name="preferences_security_require_passwords_summary">Applications must provide passwords in all messages</string>
	<string name="preferences_security_passwords">Password Manager</string>
	<string name="preferences_security_passwords_summary">Manage allowed application passwords</string>
	<string name="database_notification_types"># notification types</string>
	<string name="button_delete">Delete</string>
	<string name="button_cancel">Cancel</string>
	<string name="type_title">Growl - Notification Type Preferences</string>
	<string name="type_option_enabled">Enabled</string>
	<string name="type_option_enabled_summary">Display notifications of this type</string>
	<string name="type_display_title">Display</string>
	<string name="type_display_default">(Use application display setting)</string>
	<string name="subscriptions_title">Growl - Subscriptions</string>
	<string name="subscriptions_empty_label">Press Menu > Add Subscription to add a subscription manually</string>
	<string name="subscriptions_add_subscription">Add Subscription</string>
	<string name="subscriptions_subscribe_now">Subscribe now</string>
	<string name="subscriptions_status_available">Available</string>
	<string name="subscriptions_status_unregistered">Not subscribed</string>
	<string name="subscriptions_status_registering">Subscribing…</string>
	<string name="subscriptions_status_registered">Subscribed</string>
	<string name="subscriptions_status_not_authorized">Bad password</string>
	<string name="subscriptions_status_unknown_host">Currently unable to locate server</string>
	<string name="subscriptions_menu_title">Subscription</string>

	<string-array name="subscriptions_menu">
		<item>Edit</item>
		<item>Delete</item>
	</string-array>

	<string name="subscriptions_add_dialog_title">Add Subscription</string>
	<string name="subscriptions_edit_dialog_title">Edit Subscription</string>
	<string name="gntp_zeroconf_name_format">%1$s on %2$s</string>
	<string name="display_profile_default">(Default)</string>
	<string name="display_profile_ignore">Ignore</string>
	<string name="display_profile_silent">Silent</string>
	<string name="display_profile_vibrate">Vibrate</string>
	<string name="display_profile_growl">Growl</string>
	<string name="display_profile_growl_vibrate">Growl &amp; Vibrate</string>

</resources>