<!--
 Copyright (C) 2009 The Android Open Source Project
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
 
          http://www.apache.org/licenses/LICENSE-2.0
 
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingRight="5dip" >

	<LinearLayout
		android:id="@+id/layTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="5dp" >

		<ImageView
			android:id="@+id/imgAppIcon"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_marginRight="10dp"
			android:src="@drawable/launcher" >
		</ImageView>

		<TextView
			android:id="@+id/txtAppName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="App Name"
			android:textAppearance="?android:attr/textAppearanceLarge" >
		</TextView>
	</LinearLayout>

	<TextView
		android:id="@+id/lblOptions"
		style="?android:attr/listSeparatorTextViewStyle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="10dip"
		android:text="@string/application_options_title" />

	<com.growlforandroid.client.PreferenceCheckBoxView
		android:id="@+id/chkEnabled"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:minHeight="?android:attr/listPreferredItemHeight"
		android:paddingRight="?android:attr/scrollbarSize"
		app:summary="@string/application_option_enabled_summary"
		app:title="@string/application_option_enabled" />

	<com.growlforandroid.client.PreferenceDropDownView
		android:id="@+id/drpDisplayProfile"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:minHeight="?android:attr/listPreferredItemHeight"
		android:paddingRight="?android:attr/scrollbarSize"
		app:title="@string/application_option_display_title" />

	<TextView
		android:id="@+id/lblNotificationTypes"
		style="?android:attr/listSeparatorTextViewStyle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="10dip"
		android:text="@string/application_types_title" />

	<ListView
		android:id="@+id/lsvNotificationTypes"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
	</ListView>

</LinearLayout>